--- a/Movie-Magic/src/details.html
+++ b/Movie-Magic/src/details.html
@@ -16,12 +16,12 @@
             <img src="./static/img/logo.webp" alt="logo">
 
             <ul class="menu">
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Search</a></li>
+                <li><a href="/">Home</a></li>
+                <li><a href="/about">About</a></li>
+                <li><a href="/movies/search">Search</a></li>
                 <!--Users-->
-                <li><a href="#">Create Post</a></li>
-                <li><a href="#">Create Cast</a></li>
+                <li><a href="/movies/create">Create Movie</a></li>
+                <li><a href="/casts/create">Create Cast</a></li>
                 <li><a href="#">Logout</a></li>
                 <!--Guest-->
                 <li><a href="#">Login</a></li>
